# eulix

./: .euignore  Makefile  README.md  eulix.toml  go.mod  go.sum
.eulix/: checksum.json  context.json  embeddings.json  history.db  kb.json  kb_call_graph.json  kb_index.json  kb_summary.json
cmd/eulix/: main.go
eulix-embed/: Cargo.toml  README.md
eulix-embed/src/: chunker.rs  index.rs  main.rs  onnx_backend.rs
eulix-parser/: .euignore  Architecture.md  Cargo.toml  README.md  schema.txt  tes  test.sh
eulix-parser/src/: main.rs
eulix-parser/src/kb/: builder.rs  types.rs
eulix-parser/src/parser/: analyze.rs  c.rs  go.rs  language.rs  mod.rs  python.rs
eulix-parser/src/utils/: file_walker.rs  ignore.rs  mod.rs
internal/cache/: manager.go
internal/checksum/: detector.go
internal/cli/: analyze.go  ask.go  cache.go  chat.go  commands.go  config.go  history.go  init.go  parse.go
internal/config/: config.go
internal/embeddings/: embedder.go
internal/fixers/: Aspirine.go  GLaDOS.go  types.go
internal/llm/: client.go
internal/parser/: runner.go
internal/query/: classifier.go  contextTypes.go  context_builder.go  query.go  router.go
internal/storage/: redis.go
internal/tui/: app.go  history.go
internal/types/: context.go
