[package]
name = "eulix_embed"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "eulix_embed"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Tokenizers
tokenizers = "0.19"

# HuggingFace Hub for downloading models
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }

# ONNX Runtime - Main inference backend
ort = { version = "2.0.0-rc.10", default-features = false }

# ndarray for tensor operations with ONNX
ndarray = "0.16"
num_cpus = "1.17.0"

[features]
# Default: ONNX with CPU
default = ["onnx-cpu"]

# ONNX backends
onnx-cpu = ["ort/download-binaries"]
onnx-cuda = ["ort/download-binaries", "ort/cuda"]
onnx-rocm = ["ort/download-binaries", "ort/rocm"]
onnx-tensorrt = ["ort/download-binaries", "ort/tensorrt"]

# Convenience aliases
cpu = ["onnx-cpu"]
cuda = ["onnx-cuda"]
rocm = ["onnx-rocm"]
gpu = ["onnx-cuda"]

[dev-dependencies]
criterion = "0.5"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
