[package]
name = "eulix-parser"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "eulix_parser"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Parsing
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"

# Parallelism
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File operations
walkdir = "2.4"
glob = "0.3"

# Utilities
ignore = "0.4"
num_cpus = "1.16"
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
